--- a/src/application/Admin.fxml
+++ b/src/application/Admin.fxml
@@ -16,22 +16,6 @@
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="750.0" minWidth="1400.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <BorderPane minHeight="750.0" minWidth="1400.0">
-         <center>
-            <AnchorPane minWidth="840.0" BorderPane.alignment="CENTER">
-               <children>
-                  <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#9dacb9" height="100.0" layoutX="60.0" layoutY="45.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="1005.0" />
-                  <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#1f5affd6" height="180.0" layoutX="60.0" layoutY="200.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="300.0" />
-                  <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#0e761b" height="180.0" layoutX="410.0" layoutY="200.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="300.0" />
-                  <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#bf1313" height="180.0" layoutX="765.0" layoutY="200.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="300.0" />
-                  <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ff6921d6" height="180.0" layoutX="60.0" layoutY="435.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="300.0" />
-                  <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#99174fd6" height="180.0" layoutX="410.0" layoutY="435.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="300.0" />
-                  <Text fill="WHITE" layoutX="101.0" layoutY="117.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Good Morning, Administrator !">
-                     <font>
-                        <Font name="Calibri Bold" size="60.0" />
-                     </font>
-                  </Text>
-               </children></AnchorPane>
-         </center>
          <top>
             <AnchorPane minHeight="100.0" minWidth="1400.0" BorderPane.alignment="CENTER">
                <children>
@@ -58,9 +42,9 @@
                         <Font name="System Bold" size="24.0" />
                      </font>
                   </Text>
-                  <ImageView fitHeight="52.0" fitWidth="54.0" layoutX="34.0" layoutY="22.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fitHeight="70.0" fitWidth="70.0" layoutX="30.0" layoutY="16.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@image%20(1).png" />
+                        <Image url="@logo-removebg-preview.png" />
                      </image>
                   </ImageView>
                   <Text id="Text1" fill="WHITE" layoutX="1282.0" layoutY="46.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Admin">
@@ -81,7 +65,7 @@
                <children>
                   <AnchorPane minWidth="275.0" prefHeight="651.0">
                      <children>
-                        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#202020" height="675.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="275.0" />
+                        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#3b3b3b" height="675.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="275.0" />
                         <ImageView fitHeight="200.0" fitWidth="200.0" layoutX="25.0" layoutY="13.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@../../../../OneDrive/Pictures/Saved%20Pictures/admin2.png" />
@@ -92,42 +76,37 @@
                               <Font name="System Bold" size="24.0" />
                            </font>
                         </Text>
-                        <Button layoutX="20.0" layoutY="275.0" minHeight="40.0" minWidth="220.0" mnemonicParsing="false" style="-fx-background-color: #202020;" text="DASHBOARD" textFill="WHITE">
+                        <Button layoutX="25.0" layoutY="285.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="40.0" prefWidth="220.0" style="-fx-background-color: #202020;" text="DASHBOARD" textFill="WHITE">
                            <font>
                               <Font name="Verdana" size="14.0" />
                            </font>
                         </Button>
-                        <Button layoutX="20.0" layoutY="325.0" minHeight="40.0" minWidth="220.0" mnemonicParsing="false" style="-fx-background-color: #202020;" text="MANAGE PHARMACIST" textFill="WHITE">
+                        <Button layoutX="25.0" layoutY="340.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="40.0" prefWidth="220.0" style="-fx-background-color: #202020;" text="MANAGE PHARMACIST" textFill="WHITE">
                            <font>
                               <Font name="Verdana" size="14.0" />
                            </font>
                         </Button>
-                        <Button layoutY="376.0" minHeight="40.0" minWidth="220.0" mnemonicParsing="false" style="-fx-background-color: #202020;" text="MANAGE DOCTOR" textFill="WHITE">
+                        <Button layoutX="25.0" layoutY="395.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="40.0" prefWidth="220.0" style="-fx-background-color: #202020;" text="MANAGE MEDICINE" textFill="WHITE">
                            <font>
                               <Font name="Verdana" size="14.0" />
                            </font>
                         </Button>
-                        <Button layoutX="20.0" layoutY="375.0" minHeight="40.0" minWidth="220.0" mnemonicParsing="false" style="-fx-background-color: #202020;" text="MANAGE DOCTOR" textFill="WHITE">
+                        <Button layoutX="25.0" layoutY="450.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="40.0" prefWidth="220.0" style="-fx-background-color: #202020;" text="MANAGE TRANSPORT" textFill="WHITE">
                            <font>
                               <Font name="Verdana" size="14.0" />
                            </font>
                         </Button>
-                        <Button layoutX="20.0" layoutY="425.0" minHeight="40.0" minWidth="220.0" mnemonicParsing="false" style="-fx-background-color: #202020;" text="MANAGE MEDICINE" textFill="WHITE">
+                        <Button layoutX="25.0" layoutY="505.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="40.0" prefWidth="220.0" style="-fx-background-color: #202020;" text="ORDERED MEDICINE LIST" textFill="WHITE">
                            <font>
                               <Font name="Verdana" size="14.0" />
                            </font>
                         </Button>
-                        <Button layoutX="20.0" layoutY="475.0" minHeight="40.0" minWidth="220.0" mnemonicParsing="false" style="-fx-background-color: #202020;" text="ORDERED MEDICINE LIST" textFill="WHITE">
+                        <Button layoutX="25.0" layoutY="560.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="40.0" prefWidth="220.0" style="-fx-background-color: #202020;" text="LOG OUT" textFill="WHITE">
                            <font>
                               <Font name="Verdana" size="14.0" />
                            </font>
                         </Button>
-                        <Button layoutX="20.0" layoutY="525.0" minHeight="40.0" minWidth="220.0" mnemonicParsing="false" style="-fx-background-color: #202020;" text="LOG OUT" textFill="WHITE">
-                           <font>
-                              <Font name="Verdana" size="14.0" />
-                           </font>
-                        </Button>
-                        <Button layoutX="20.0" layoutY="575.0" minHeight="40.0" minWidth="220.0" mnemonicParsing="false" style="-fx-background-color: #202020;" text="EXIT" textFill="WHITE">
+                        <Button layoutX="25.0" layoutY="615.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="40.0" prefWidth="220.0" style="-fx-background-color: #202020;" text="EXIT APPLICATION" textFill="WHITE">
                            <font>
                               <Font name="Verdana" size="14.0" />
                            </font>
@@ -136,6 +115,9 @@
                </children>
             </VBox>
          </left>
+         <center>
+            <AnchorPane minHeight="675.0" minWidth="1125.0" BorderPane.alignment="CENTER" />
+         </center>
       </BorderPane>
    </children>
 </AnchorPane>
