--- a/bin/application/MP-Search.fxml
+++ b/bin/application/MP-Search.fxml
@@ -7,28 +7,40 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
-
+<?import javafx.scene.text.Text?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="675.0" minWidth="855.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#dcdfe1" height="590.0" layoutX="49.0" layoutY="45.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="760.0" />
-      <TextField layoutX="85.0" layoutY="90.0" minHeight="40.0" minWidth="350.0" prefHeight="40.0" promptText="Search Pharmacist">
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#84b2d1" height="653.0" layoutX="49.0" layoutY="11.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="760.0" />
+      <TextField layoutX="84.0" layoutY="97.0" minHeight="40.0" minWidth="226.0" prefHeight="40.0" prefWidth="226.0" promptText="Enter First Name">
          <font>
             <Font name="Verdana Bold" size="14.0" />
          </font>
       </TextField>
-      <Button layoutX="480.0" layoutY="90.0" minHeight="40.0" minWidth="100.0" mnemonicParsing="false" style="-fx-background-color: #326e9c;" text="SEARCH" textFill="WHITE">
+      <Button layoutX="562.0" layoutY="97.0" minHeight="40.0" minWidth="100.0" mnemonicParsing="false" style="-fx-background-color: #326e9c;" text="SEARCH" textFill="WHITE">
          <font>
             <Font name="Verdana Bold" size="14.0" />
          </font>
       </Button>
-      <TableView layoutX="85.0" layoutY="168.0" prefHeight="355.0" prefWidth="686.0">
+      <TableView layoutX="84.0" layoutY="202.0" opacity="0.87" prefHeight="355.0" prefWidth="686.0">
         <columns>
-          <TableColumn prefWidth="49.600006103515625" text="Sr No." />
-          <TableColumn prefWidth="194.3999786376953" text="Pharmacist Name" />
-            <TableColumn prefWidth="267.20001220703125" text="Column X" />
-            <TableColumn prefWidth="171.99996337890627" text="Column X" />
+          <TableColumn prefWidth="49.600006103515625" text="S.NO." />
+          <TableColumn prefWidth="108.0" text="NAME" />
+            <TableColumn prefWidth="122.39997863769531" text="EMAIL ID" />
+            <TableColumn prefWidth="129.599853515625" text="DATE OF BIRTH" />
+            <TableColumn prefWidth="132.0" text="MOBLIE NO." />
+            <TableColumn prefWidth="143.19998779296873" text="ADDRESS" />
         </columns>
       </TableView>
+      <Text layoutX="84.0" layoutY="66.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Pharmacists List">
+         <font>
+            <Font name="Verdana Bold" size="16.0" />
+         </font>
+      </Text>
+      <TextField layoutX="322.0" layoutY="97.0" minHeight="40.0" minWidth="226.0" prefHeight="40.0" prefWidth="226.0" promptText="Enter Login Id">
+         <font>
+            <Font name="Verdana Bold" size="14.0" />
+         </font>
+      </TextField>
    </children>
 </AnchorPane>
