--- a/bin/application/Password.fxml
+++ b/bin/application/Password.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="650.0" minWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.Controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="650.0" minWidth="600.0" style="-fx-background-color: #dce2e7;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.Controller">
    <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#70b8dc" height="597.0" layoutX="51.0" layoutY="25.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="499.0" />
       <Text fill="#e1e1e1" layoutX="173.0" layoutY="63.0" strokeType="OUTSIDE" strokeWidth="0.0" text="FORGOT PASSWORD">
@@ -32,12 +32,12 @@
             <Font name="Verdana Italic" size="16.0" />
          </font>
       </TextField>
-      <Text layoutX="72.0" layoutY="262.0" strokeType="OUTSIDE" strokeWidth="0.0" text="User ID :">
+      <Text fill="#0c3d6b" layoutX="72.0" layoutY="262.0" strokeType="OUTSIDE" strokeWidth="0.0" text="User ID :">
          <font>
             <Font name="Verdana Bold Italic" size="16.0" />
          </font>
       </Text>
-      <Text layoutX="72.0" layoutY="351.0" strokeType="OUTSIDE" strokeWidth="0.0" text="New Password :">
+      <Text fill="#0c3d6b" layoutX="72.0" layoutY="351.0" strokeType="OUTSIDE" strokeWidth="0.0" text="New Password :">
          <font>
             <Font name="Verdana Bold Italic" size="16.0" />
          </font>
@@ -47,17 +47,17 @@
             <Font name="Verdana Italic" size="16.0" />
          </font>
       </PasswordField>
-      <Text layoutX="72.0" layoutY="89.0" strokeType="OUTSIDE" strokeWidth="0.0" text="First Name :">
+      <Text fill="#0c3d6b" layoutX="72.0" layoutY="89.0" strokeType="OUTSIDE" strokeWidth="0.0" text="First Name :">
          <font>
             <Font name="Verdana Bold Italic" size="16.0" />
          </font>
       </Text>
-      <Text layoutX="72.0" layoutY="175.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Last Name :">
+      <Text fill="#0c3d6b" layoutX="72.0" layoutY="175.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Last Name :">
          <font>
             <Font name="Verdana Bold Italic" size="16.0" />
          </font>
       </Text>
-      <Text layoutX="72.0" layoutY="440.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Confirm Password :">
+      <Text fill="#0c3d6b" layoutX="72.0" layoutY="440.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Confirm Password :">
          <font>
             <Font name="Verdana Bold Italic" size="16.0" />
          </font>
