--- a/src/Doctor/User.fxml
+++ b/src/Doctor/User.fxml
@@ -13,13 +13,16 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane fx:id="borderpane" minHeight="750.0" minWidth="1400.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Pharmacist.PharmacistController">
+<BorderPane fx:id="borderpane" minHeight="750.0" minWidth="1400.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Doctor.DoctorController">
+   <center>
+      <AnchorPane minWidth="840.0" BorderPane.alignment="CENTER" />
+   </center>
    <top>
       <AnchorPane minHeight="100.0" minWidth="1400.0" BorderPane.alignment="CENTER">
          <children>
             <Rectangle arcHeight="5.0" arcWidth="5.0" height="100.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="1400.0">
                <fill>
-                  <LinearGradient cycleMethod="REFLECT" endX="0.07954542022762871" endY="0.9356060262882349" startX="0.5378787951035933" startY="0.9431817947012006">
+                  <LinearGradient cycleMethod="REFLECT" endX="0.06818182089112022" startX="0.5151515440507368">
                      <stops>
                         <Stop>
                            <color>
@@ -35,17 +38,17 @@
                   </LinearGradient>
                </fill>
             </Rectangle>
+            <ImageView fitHeight="79.0" fitWidth="74.0" layoutX="14.0" layoutY="9.0">
+               <image>
+                  <Image url="@../Images/logo.png" />
+               </image>
+            </ImageView>
             <Text id="Text1" fill="WHITE" layoutX="100.0" layoutY="58.0" strokeType="OUTSIDE" strokeWidth="0.0" text="PHARMACY MANAGEMENT SYSTEM">
                <font>
                   <Font name="System Bold" size="24.0" />
                </font>
             </Text>
-            <ImageView fitHeight="70.0" fitWidth="70.0" layoutX="30.0" layoutY="16.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../Images/logo.png" />
-               </image>
-            </ImageView>
-            <Text id="Text1" fill="WHITE" layoutX="1239.0" layoutY="57.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Pharmacist">
+            <Text id="Text1" fill="WHITE" layoutX="1262.0" layoutY="59.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Doctor">
                <font>
                   <Font name="System Bold" size="24.0" />
                </font>
@@ -65,56 +68,46 @@
             <AnchorPane minWidth="275.0" prefHeight="651.0">
                <children>
                   <Rectangle arcHeight="5.0" arcWidth="5.0" height="675.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="275.0" />
-                  <ImageView fitHeight="200.0" fitWidth="200.0" layoutX="54.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../Images/pharmacist1.png" />
-                     </image>
-                  </ImageView>
-                  <Text fill="WHITE" layoutX="47.0" layoutY="246.0" strokeType="OUTSIDE" strokeWidth="0.0" text="PHARMACIST" wrappingWidth="213.1830654144287">
+                  <Text fill="WHITE" layoutX="29.0" layoutY="265.0" strokeType="OUTSIDE" strokeWidth="0.0" text="DOCTOR" textAlignment="CENTER" wrappingWidth="213.1830654144287">
                      <font>
                         <Font name="System Bold" size="24.0" />
                      </font>
                   </Text>
-                  <Button layoutX="25.0" layoutY="265.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="40.0" prefWidth="220.0" style="-fx-background-color: #202020;" text="DASHBOARD" textFill="WHITE">
+                  <Button contentDisplay="CENTER" layoutX="28.0" layoutY="291.0" minHeight="40.0" minWidth="220.0" mnemonicParsing="false" style="-fx-background-color: #202020;" text="DASHBOARD" textFill="WHITE">
                      <font>
                         <Font name="Verdana" size="14.0" />
                      </font>
                   </Button>
-                  <Button layoutX="25.0" layoutY="318.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="40.0" prefWidth="220.0" style="-fx-background-color: #202020;" text="STOCKS" textFill="WHITE">
+                  <Button contentDisplay="CENTER" layoutX="28.0" layoutY="344.0" minHeight="40.0" minWidth="220.0" mnemonicParsing="false" style="-fx-background-color: #202020;" text="MY APPOINTMENTS" textFill="WHITE">
                      <font>
                         <Font name="Verdana" size="14.0" />
                      </font>
                   </Button>
-                  <Button layoutX="25.0" layoutY="371.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="40.0" prefWidth="220.0" style="-fx-background-color: #202020;" text="SALES" textFill="WHITE">
+                  <Button contentDisplay="CENTER" layoutX="28.0" layoutY="394.0" minHeight="40.0" minWidth="220.0" mnemonicParsing="false" style="-fx-background-color: #202020;" text="PATENT RECORDS" textFill="WHITE">
                      <font>
                         <Font name="Verdana" size="14.0" />
                      </font>
                   </Button>
-                  <Button layoutX="25.0" layoutY="422.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="40.0" prefWidth="220.0" style="-fx-background-color: #202020;" text="NET PROFIT" textFill="WHITE">
+                  <Button contentDisplay="CENTER" layoutX="28.0" layoutY="444.0" minHeight="40.0" minWidth="220.0" mnemonicParsing="false" style="-fx-background-color: #202020;" text="MEDICINES" textFill="WHITE">
                      <font>
                         <Font name="Verdana" size="14.0" />
                      </font>
                   </Button>
-                  <Button layoutX="25.0" layoutY="472.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="40.0" prefWidth="220.0" style="-fx-background-color: #202020;" text="ONLINE ORDERING" textFill="WHITE">
+                  <Button contentDisplay="CENTER" layoutX="28.0" layoutY="495.0" minHeight="40.0" minWidth="220.0" mnemonicParsing="false" onAction="#ShowHome" style="-fx-background-color: #202020;" text="LOG OUT" textFill="WHITE">
                      <font>
                         <Font name="Verdana" size="14.0" />
                      </font>
                   </Button>
-                  <Button layoutX="25.0" layoutY="570.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#ShowHome" prefHeight="40.0" prefWidth="220.0" style="-fx-background-color: #202020;" text="LOG OUT" textFill="WHITE">
+                  <Button contentDisplay="CENTER" layoutX="29.0" layoutY="547.0" minHeight="40.0" minWidth="220.0" mnemonicParsing="false" style="-fx-background-color: #202020;" text="EXIT " textFill="WHITE">
                      <font>
                         <Font name="Verdana" size="14.0" />
                      </font>
                   </Button>
-                  <Button layoutX="25.0" layoutY="621.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="40.0" prefWidth="220.0" style="-fx-background-color: #202020;" text="EXIT" textFill="WHITE">
-                     <font>
-                        <Font name="Verdana" size="14.0" />
-                     </font>
-                  </Button>
-                  <Button layoutX="25.0" layoutY="520.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="40.0" prefWidth="220.0" style="-fx-background-color: #202020;" text="ONLINE ORDERING" textFill="WHITE">
-                     <font>
-                        <Font name="Verdana" size="14.0" />
-                     </font>
-                  </Button>
+                  <ImageView fitHeight="200.0" fitWidth="200.0" layoutX="29.0" layoutY="31.0" nodeOrientation="RIGHT_TO_LEFT">
+                     <image>
+                        <Image url="@../Images/Doctor1.png" />
+                     </image>
+                  </ImageView>
                </children>
             </AnchorPane>
          </children>
