--- a/bin/Admin/MP-Add.fxml
+++ b/bin/Admin/MP-Add.fxml
@@ -2,6 +2,8 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -9,74 +11,95 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="675.0" minWidth="855.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="590.0" minWidth="1125.0" style="-fx-background-color: #dce2e7;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Admin.AdminController">
    <children>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#84b2d1" height="651.0" layoutX="49.0" layoutY="12.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="638.0" />
-      <Text layoutX="75.0" layoutY="85.0" strokeType="OUTSIDE" strokeWidth="0.0" text="First Name :">
+      <Rectangle arcHeight="30.0" arcWidth="30.0" fill="#84b2d1" height="545.0" layoutX="60.0" layoutY="23.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="672.0" />
+      <Text fill="#0c3d6b" layoutX="87.0" layoutY="74.0" strokeType="OUTSIDE" strokeWidth="0.0" text="First Name :">
          <font>
             <Font name="Verdana Bold Italic" size="16.0" />
          </font>
       </Text>
-      <TextField id="L_name" fx:id="L_name" layoutX="375.0" layoutY="105.0" minHeight="40.0" minWidth="222.0" prefHeight="40.0" prefWidth="222.0" promptText="John">
+      <TextField id="L_name" fx:id="F_name" layoutX="85.0" layoutY="85.0" minHeight="40.0" minWidth="222.0" prefHeight="40.0" prefWidth="222.0" promptText="Steve">
          <font>
             <Font name="Verdana Italic" size="16.0" />
          </font>
       </TextField>
-      <Button layoutX="130.0" layoutY="550.0" minHeight="50.0" minWidth="100.0" mnemonicParsing="false" onAction="#Signup" style="-fx-background-color: #CCFFE5;" text="ADD TO LIST">
-         <font>
-            <Font name="Verdana Bold" size="14.0" />
-         </font>
-      </Button>
-      <Button layoutX="361.0" layoutY="550.0" minHeight="50.0" minWidth="100.0" mnemonicParsing="false" onAction="#Reset" style="-fx-background-color: #CCFFE5;" text="RESET">
-         <font>
-            <Font name="Verdana Bold" size="14.0" />
-         </font>
-      </Button>
-      <Text layoutX="375.0" layoutY="84.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Last Name :">
+      <Text fill="#0c3d6b" layoutX="410.0" layoutY="73.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Last Name :">
          <font>
             <Font name="Verdana Bold Italic" size="16.0" />
          </font>
       </Text>
-      <TextField id="L_name" fx:id="L_name1" layoutX="75.0" layoutY="105.0" minHeight="40.0" minWidth="222.0" prefHeight="40.0" prefWidth="222.0" promptText="Steve">
+      <TextField id="L_name" fx:id="L_name" layoutX="410.0" layoutY="85.0" minHeight="40.0" minWidth="222.0" prefHeight="40.0" prefWidth="222.0" promptText="John">
          <font>
             <Font name="Verdana Italic" size="16.0" />
          </font>
       </TextField>
-      <Text layoutX="75.0" layoutY="184.0" strokeType="OUTSIDE" strokeWidth="0.0" text="User ID :">
+      <Text fill="#0c3d6b" layoutX="87.0" layoutY="164.0" strokeType="OUTSIDE" strokeWidth="0.0" text="User ID :">
          <font>
             <Font name="Verdana Bold Italic" size="16.0" />
          </font>
       </Text>
-      <TextField id="Email" fx:id="Email" layoutX="75.0" layoutY="200.0" minHeight="40.0" minWidth="450.0" prefHeight="40.0" prefWidth="408.0" promptText="Sample@examle.com">
+      <TextField id="Email" fx:id="Email" layoutX="87.0" layoutY="177.0" minHeight="40.0" minWidth="450.0" promptText="Sample@examle.com">
          <font>
             <Font name="Verdana Italic" size="16.0" />
          </font>
       </TextField>
-      <Text layoutX="75.0" layoutY="274.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Date Of Birth :">
+      <Text fill="#0c3d6b" layoutX="87.0" layoutY="333.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Date Of Birth :">
          <font>
             <Font name="Verdana Bold Italic" size="16.0" />
          </font>
       </Text>
-      <DatePicker id="DOB" fx:id="DOB" layoutX="75.0" layoutY="298.0" minHeight="40.0" minWidth="100.0" promptText="01/01/1000" />
-      <Text layoutX="375.0" layoutY="273.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Mobile Number :">
+      <DatePicker id="DOB" fx:id="DOB" layoutX="87.0" layoutY="351.0" minHeight="40.0" minWidth="100.0" promptText="01/01/1000" />
+      <Text fill="#0c3d6b" layoutX="410.0" layoutY="333.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Mobile Number :">
          <font>
             <Font name="Verdana Bold Italic" size="16.0" />
          </font>
       </Text>
-      <TextField id="M_num" fx:id="M_num" layoutX="370.0" layoutY="298.0" minHeight="40.0" minWidth="222.0" prefHeight="40.0" prefWidth="222.0" promptText="987654321">
+      <TextField id="M_num" fx:id="M_num" layoutX="410.0" layoutY="351.0" minHeight="40.0" minWidth="222.0" prefHeight="40.0" prefWidth="222.0" promptText="987654321">
          <font>
             <Font name="Verdana Italic" size="16.0" />
          </font>
       </TextField>
-      <Text layoutX="75.0" layoutY="378.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Address :">
-         <font>
-            <Font name="Verdana Bold Italic" size="16.0" />
-         </font>
-      </Text>
-      <TextArea id="Address" fx:id="Address" layoutX="75.0" layoutY="403.0" prefHeight="91.0" prefWidth="450.0" promptText="H No: 00 , Street name , Colony , City ,State.">
+      <TextArea id="Address" fx:id="QualificationP" layoutX="87.0" layoutY="448.0" prefHeight="91.0" prefWidth="450.0" promptText="H No: 00 , Street name , Colony , City ,State.">
          <font>
             <Font name="Verdana Italic" size="16.0" />
          </font>
       </TextArea>
+      <Button layoutX="853.0" layoutY="277.0" minHeight="50.0" minWidth="100.0" mnemonicParsing="false" onAction="#Addtolist" style="-fx-background-color: #CCFFE5;" text="ADD TO LIST">
+         <font>
+            <Font name="Verdana Bold" size="14.0" />
+         </font>
+      </Button>
+      <Button layoutX="853.0" layoutY="398.0" minHeight="50.0" minWidth="100.0" mnemonicParsing="false" onAction="#Re" prefHeight="50.0" prefWidth="121.0" style="-fx-background-color: #CCFFE5;" text="RESET">
+         <font>
+            <Font name="Verdana Bold" size="14.0" />
+         </font>
+      </Button>
+      <Rectangle arcHeight="30.0" arcWidth="30.0" fill="#2fc9d4" height="72.0" layoutX="774.0" layoutY="125.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="281.0" />
+      <Text fill="#0c3d6b" layoutX="789.0" layoutY="168.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ADD PHARMACIST" wrappingWidth="249.7735595703125">
+         <font>
+            <Font name="Verdana Bold" size="23.0" />
+         </font>
+      </Text>
+      <Text fill="#0c3d6b" layoutX="86.0" layoutY="429.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Qualifications:">
+         <font>
+            <Font name="Verdana Bold Italic" size="16.0" />
+         </font>
+      </Text>
+      <Text fill="#0c3d6b" layoutX="87.0" layoutY="248.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Password :">
+         <font>
+            <Font name="Verdana Bold Italic" size="16.0" />
+         </font>
+      </Text>
+      <PasswordField fx:id="Password" layoutX="85.0" layoutY="263.0" prefHeight="40.0" prefWidth="450.0" promptText="Sample#123">
+         <font>
+            <Font name="Verdana Italic" size="16.0" />
+         </font>
+      </PasswordField>
+      <Label fx:id="label" layoutX="755.0" layoutY="474.0" prefHeight="20.0" prefWidth="330.0" textFill="#09ff00">
+         <font>
+            <Font name="Verdana Italic" size="16.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
