--- a/src/Admin/Admin.fxml
+++ b/src/Admin/Admin.fxml
@@ -95,7 +95,7 @@
                         <Font name="Verdana" size="14.0" />
                      </font>
                   </Button>
-                  <Button layoutX="25.0" layoutY="450.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="40.0" prefWidth="220.0" style="-fx-background-color: #202020;" text="MANAGE DOCTOR" textFill="WHITE">
+                  <Button layoutX="25.0" layoutY="450.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#ShowDoctorP" prefHeight="40.0" prefWidth="220.0" style="-fx-background-color: #202020;" text="MANAGE DOCTOR" textFill="WHITE">
                      <font>
                         <Font name="Verdana" size="14.0" />
                      </font>
