--- a/src/application/Apply.fxml
+++ b/src/application/Apply.fxml
@@ -31,63 +31,63 @@
          </font>
       </Text>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="586.0" layoutX="815.0" layoutY="13.0" stroke="BLACK" strokeType="INSIDE" style="-fx-arc-height: 20; -fx-arc-width: 20;" width="550.0" />
-      <Text layoutX="845.0" layoutY="134.0" strokeType="OUTSIDE" strokeWidth="0.0" text="User ID :">
+      <Text fill="#0c3d6b" layoutX="845.0" layoutY="134.0" strokeType="OUTSIDE" strokeWidth="0.0" text="User ID :">
          <font>
             <Font name="Verdana Bold Italic" size="16.0" />
          </font>
       </Text>
-      <Text layoutX="845.0" layoutY="49.0" strokeType="OUTSIDE" strokeWidth="0.0" text="First Name :">
+      <Text fill="#0c3d6b" layoutX="845.0" layoutY="49.0" strokeType="OUTSIDE" strokeWidth="0.0" text="First Name :">
          <font>
             <Font name="Verdana Bold Italic" size="16.0" />
          </font>
       </Text>
-      <Text layoutX="1111.0" layoutY="49.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Last Name :">
+      <Text fill="#0c3d6b" layoutX="1111.0" layoutY="49.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Last Name :">
          <font>
             <Font name="Verdana Bold Italic" size="16.0" />
          </font>
       </Text>
-      <TextField id="F_name" fx:id="F_nameP" layoutX="845.0" layoutY="65.0" minHeight="40.0" minWidth="222.0" prefHeight="40.0" prefWidth="222.0" promptText="Steve">
+      <TextField id="F_name" fx:id="F_name" layoutX="845.0" layoutY="65.0" minHeight="40.0" minWidth="222.0" prefHeight="40.0" prefWidth="222.0" promptText="Steve">
          <font>
             <Font name="Verdana Italic" size="16.0" />
          </font>
       </TextField>
-      <TextField id="L_name" fx:id="L_nameP" layoutX="1113.0" layoutY="65.0" minHeight="40.0" minWidth="222.0" prefHeight="40.0" prefWidth="222.0" promptText="John">
+      <TextField id="L_name" fx:id="L_name" layoutX="1113.0" layoutY="65.0" minHeight="40.0" minWidth="222.0" prefHeight="40.0" prefWidth="222.0" promptText="John">
          <font>
             <Font name="Verdana Italic" size="16.0" />
          </font>
       </TextField>
-      <DatePicker id="DOB" fx:id="DOBP" layoutX="845.0" layoutY="324.0" minHeight="40.0" minWidth="100.0" promptText="01/01/1000" />
-      <TextField id="Email" fx:id="EmailP" layoutX="845.0" layoutY="148.0" minHeight="40.0" minWidth="450.0" prefHeight="40.0" prefWidth="408.0" promptText="Username@Pharmacy.in">
+      <DatePicker id="DOB" fx:id="DOB" layoutX="845.0" layoutY="324.0" minHeight="40.0" minWidth="100.0" promptText="01/01/1000" />
+      <TextField id="Email" fx:id="Email" layoutX="845.0" layoutY="148.0" minHeight="40.0" minWidth="450.0" prefHeight="40.0" prefWidth="408.0" promptText="Username@Pharmacy.in">
          <font>
             <Font name="Verdana Italic" size="16.0" />
          </font>
       </TextField>
-      <PasswordField fx:id="Password2P" layoutX="845.0" layoutY="235.0" minHeight="40.0" minWidth="450.0" promptText="Sample#123">
+      <PasswordField fx:id="Password" layoutX="845.0" layoutY="235.0" minHeight="40.0" minWidth="450.0" promptText="Sample#123">
          <font>
             <Font name="Verdana Italic" size="16.0" />
          </font>
       </PasswordField>
-      <Text layoutX="845.0" layoutY="221.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Password :">
+      <Text fill="#0c3d6b" layoutX="845.0" layoutY="221.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Password :">
          <font>
             <Font name="Verdana Bold Italic" size="16.0" />
          </font>
       </Text>
-      <Text layoutX="845.0" layoutY="308.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Date Of Birth :">
+      <Text fill="#0c3d6b" layoutX="845.0" layoutY="308.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Date Of Birth :">
          <font>
             <Font name="Verdana Bold Italic" size="16.0" />
          </font>
       </Text>
-      <Text layoutX="1113.0" layoutY="308.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Mobile Number :">
+      <Text fill="#0c3d6b" layoutX="1113.0" layoutY="308.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Mobile Number :">
          <font>
             <Font name="Verdana Bold Italic" size="16.0" />
          </font>
       </Text>
-      <TextField id="M_num" fx:id="M_numP" layoutX="1113.0" layoutY="324.0" minHeight="40.0" minWidth="222.0" prefHeight="40.0" prefWidth="222.0" promptText="987654321">
+      <TextField id="M_num" fx:id="M_num" layoutX="1113.0" layoutY="324.0" minHeight="40.0" minWidth="222.0" prefHeight="40.0" prefWidth="222.0" promptText="987654321">
          <font>
             <Font name="Verdana Italic" size="16.0" />
          </font>
       </TextField>
-      <Text layoutX="843.0" layoutY="397.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Qualifications:">
+      <Text fill="#0c3d6b" layoutX="843.0" layoutY="397.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Qualifications:">
          <font>
             <Font name="Verdana Bold Italic" size="16.0" />
          </font>
@@ -107,7 +107,7 @@
             <Font name="Verdana Bold" size="14.0" />
          </font>
       </Button>
-      <Label fx:id="label" layoutX="1004.0" layoutY="571.0" prefHeight="20.0" prefWidth="330.0" textFill="#09ff00">
+      <Label fx:id="label" layoutX="933.0" layoutY="571.0" prefHeight="20.0" prefWidth="330.0" textFill="#09ff00">
          <font>
             <Font name="Verdana Italic" size="16.0" />
          </font>
@@ -119,12 +119,12 @@
          </font>
       </Text>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ccffe5" height="82.0" layoutX="223.0" layoutY="457.0" stroke="BLACK" strokeType="INSIDE" style="-fx-arc-height: 20; -fx-arc-width: 20;" width="252.0" />
-      <Text layoutX="251.0" layoutY="495.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Click on Signin button">
+      <Text fill="#0c3d6b" layoutX="251.0" layoutY="495.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Click on Signin button">
          <font>
             <Font name="Verdana Bold Italic" size="16.0" />
          </font>
       </Text>
-      <Text layoutX="321.0" layoutY="521.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Above">
+      <Text fill="#0c3d6b" layoutX="321.0" layoutY="521.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Above">
          <font>
             <Font name="Verdana Bold Italic" size="16.0" />
          </font>
