--- a/src/application/Password.fxml
+++ b/src/application/Password.fxml
@@ -17,17 +17,17 @@
             <Font name="Verdana Bold" size="20.0" />
          </font>
       </Text>
-      <TextField id="Email" fx:id="Email1" layoutX="65.0" layoutY="280.0" minHeight="40.0" minWidth="450.0" promptText="Sample@example.com">
+      <TextField id="Email" fx:id="Email" layoutX="65.0" layoutY="280.0" minHeight="40.0" minWidth="450.0" promptText="Sample@example.com">
          <font>
             <Font name="Verdana Italic" size="16.0" />
          </font>
       </TextField>
-      <TextField id="F_name" fx:id="F_name1" layoutX="61.0" layoutY="109.0" minHeight="40.0" minWidth="222.0" prefHeight="40.0" prefWidth="222.0" promptText="Steve">
+      <TextField id="F_name" fx:id="F_name" layoutX="61.0" layoutY="109.0" minHeight="40.0" minWidth="222.0" prefHeight="40.0" prefWidth="222.0" promptText="Steve">
          <font>
             <Font name="Verdana Italic" size="16.0" />
          </font>
       </TextField>
-      <TextField id="L_name" fx:id="L_name1" layoutX="65.0" layoutY="193.0" minHeight="40.0" minWidth="222.0" prefHeight="40.0" prefWidth="222.0" promptText="John">
+      <TextField id="L_name" fx:id="L_name" layoutX="65.0" layoutY="193.0" minHeight="40.0" minWidth="222.0" prefHeight="40.0" prefWidth="222.0" promptText="John">
          <font>
             <Font name="Verdana Italic" size="16.0" />
          </font>
@@ -72,7 +72,7 @@
             <Font name="Verdana Bold" size="14.0" />
          </font>
       </Button>
-      <Label fx:id="label2" layoutX="178.0" layoutY="516.0" prefHeight="26.0" prefWidth="250.0" textFill="WHITE">
+      <Label fx:id="label" layoutX="178.0" layoutY="516.0" prefHeight="26.0" prefWidth="250.0" textFill="WHITE">
          <font>
             <Font name="System Italic" size="16.0" />
          </font>
