--- a/bin/Admin/Admin.fxml
+++ b/bin/Admin/Admin.fxml
@@ -80,37 +80,42 @@
                         <Font name="System Bold" size="24.0" />
                      </font>
                   </Text>
-                  <Button layoutX="25.0" layoutY="285.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#ShowDash" prefHeight="40.0" prefWidth="220.0" style="-fx-background-color: #202020;" text="DASHBOARD" textFill="WHITE">
+                  <Button layoutX="25.0" layoutY="254.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#ShowDash" prefHeight="40.0" prefWidth="220.0" style="-fx-background-color: #202020;" text="DASHBOARD" textFill="WHITE">
                      <font>
                         <Font name="Verdana" size="14.0" />
                      </font>
                   </Button>
-                  <Button layoutX="25.0" layoutY="340.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#ShowManageP" prefHeight="40.0" prefWidth="220.0" style="-fx-background-color: #202020;" text="MANAGE PHARMACIST" textFill="WHITE">
+                  <Button layoutX="28.0" layoutY="304.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#ShowManageP" prefHeight="40.0" prefWidth="220.0" style="-fx-background-color: #202020;" text="MANAGE PHARMACIST" textFill="WHITE">
                      <font>
                         <Font name="Verdana" size="14.0" />
                      </font>
                   </Button>
-                  <Button layoutX="25.0" layoutY="395.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="40.0" prefWidth="220.0" style="-fx-background-color: #202020;" text="MANAGE MEDICINE" textFill="WHITE">
+                  <Button layoutX="28.0" layoutY="353.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="40.0" prefWidth="220.0" style="-fx-background-color: #202020;" text="MANAGE MEDICINE" textFill="WHITE">
                      <font>
                         <Font name="Verdana" size="14.0" />
                      </font>
                   </Button>
-                  <Button layoutX="25.0" layoutY="450.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#ShowDoctorP" prefHeight="40.0" prefWidth="220.0" style="-fx-background-color: #202020;" text="MANAGE DOCTOR" textFill="WHITE">
+                  <Button layoutX="28.0" layoutY="404.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#ShowDoctorP" prefHeight="40.0" prefWidth="220.0" style="-fx-background-color: #202020;" text="MANAGE DOCTOR" textFill="WHITE">
                      <font>
                         <Font name="Verdana" size="14.0" />
                      </font>
                   </Button>
-                  <Button layoutX="25.0" layoutY="505.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="40.0" prefWidth="220.0" style="-fx-background-color: #202020;" text="BOOKED MEDICINES" textFill="WHITE">
+                  <Button layoutX="28.0" layoutY="455.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="40.0" prefWidth="220.0" style="-fx-background-color: #202020;" text="BOOKED MEDICINES" textFill="WHITE">
                      <font>
                         <Font name="Verdana" size="14.0" />
                      </font>
                   </Button>
-                  <Button layoutX="25.0" layoutY="560.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#ShowHome" prefHeight="40.0" prefWidth="220.0" style="-fx-background-color: #202020;" text="LOG OUT" textFill="WHITE">
+                  <Button layoutX="28.0" layoutY="560.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#ShowHome" prefHeight="40.0" prefWidth="220.0" style="-fx-background-color: #202020;" text="LOG OUT" textFill="WHITE">
                      <font>
                         <Font name="Verdana" size="14.0" />
                      </font>
                   </Button>
-                  <Button layoutX="25.0" layoutY="615.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="40.0" prefWidth="220.0" style="-fx-background-color: #202020;" text="EXIT " textFill="WHITE">
+                  <Button layoutX="28.0" layoutY="615.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="40.0" prefWidth="220.0" style="-fx-background-color: #202020;" text="EXIT " textFill="WHITE">
+                     <font>
+                        <Font name="Verdana" size="14.0" />
+                     </font>
+                  </Button>
+                  <Button layoutX="28.0" layoutY="506.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#ShowStocks" prefHeight="40.0" prefWidth="220.0" style="-fx-background-color: #202020;" text="STOCKS" textFill="WHITE">
                      <font>
                         <Font name="Verdana" size="14.0" />
                      </font>
